# entari-plugin-permission

./: .gitignore  LICENSE  README.md  example_plugin.py  pyproject.toml
src/entari_plugin_permission/: README.md  __init__.py  check.py  config.py  event.py  handler.py  main.py  model.py  params.py  service.py  store.py
